<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    android:fadeScrollbars="false"
    tools:context=".SendTweetActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtSendTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/send_tweet"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/btnSendTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttons_background"
        android:onClick="sendingTweet"
        android:text="@string/send_tweet_btn"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnViewTweets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttons_background"
        android:text="@string/btn_view_tweets" />

    <ListView
        android:id="@+id/viewTweetsListView"
        android:layout_width="408dp"
        android:layout_height="486dp"
        />
</LinearLayout>